# gromit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
src/gromit/: __init__.py  audio_utils.py  cli.py  diarizer.py  formatter.py  transcriber.py
